Product overflow fix- COMPLETE

--- a/src/app/Components/home/home-page/products/products.component.css
+++ b/src/app/Components/home/home-page/products/products.component.css
@@ -36,10 +36,11 @@ span {
 
 /*Image Styles*/
 #item {
-  max-width: 300px;
+  max-width: 85%;
   object-fit: contain;
   border-radius: 3px;
-  padding: 0px 15px;
+  padding: 0px 35px;
+
 
 
 }
